<resources>
    <string name="app_name">My Application</string>
    <string name="hello">Hello World!</string>
    <string name="button">Button</string>
    <string name="enter_text">Enter text</string>
    <string name="textview">TextView</string>
</resources>